[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md_llm"
version = "0.1.0"
description = "Reusable Streamlit markdown reader + LLM chat (Ollama / OpenRouter / OpenAI-compatible)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["streamlit>=1.30"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
